# sequence

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  sequence.hpp
src/detail/: container_compatible_range.hpp  detached_range.hpp  exception_guard.hpp  range_guard.hpp  storage.hpp  traits.hpp  uninitialized.hpp
test/: CMakeLists.txt  sequence_test.cpp
test/detail/: traits_test.cpp
